--- a/home.html
+++ b/home.html
@@ -9,11 +9,11 @@
 
 <!--The image of Tim Berners-Lee is being used with permission by the W3C, and the W3C logo is being used in accordance with this organization's permission practices.  All other information is copyrighted by the author. Both the HTML/CSS coding and the writing and research were done by the author.-->
 
-<meta name="description" content="The early career of Tim Berners-Lee and the invention of the Internet, URIs, technologies of communication in place throughout history and how each of them transfers and restructures information and meaning, and the potential for the invasion of privacy and abuse on the WWW."/> 
+<meta name="description" content="An overview of semiconducotrs, the semiconductor supply chain, and possible remedies."/> 
 
-<meta name="keywords" content="Tim Berners-Lee, Berners- Lee, Sir Tim Berners-Lee, URIs, URLs, inventor, invention, inventor of the Internet, Internet, SGML, HTML, URIs, Protocols, HTTP, CERN, W3C, World Wide Web Consortium, privacy, abuse, open source"/> 
+<meta name="keywords" content=""/> 
 
-<meta name="author" content="J.D. Applen"/>
+<meta name="author" content="Carlos Gonzalez and Nick Miguel"/>
 
 
 <link rel="stylesheet" type="text/css" href="stylesheets.css"/>
@@ -23,42 +23,31 @@
 <body>
 
 <div id="container">
-<div id="header"><img src="TBlimages/smalltimbernerslee.jpg" height="131" width="200" align="left" alt="Tim Berners-Lee"/><h1 style="position:relative; top:30px">Tim Berners-Lee</h1></div>
+<div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
  <div id="menu">
- <ul>
- <li><a href="home.html">Home</a></li>
- <li><a href="inventor.html">Inventor</a></li>
- 
- <li><a href="futureoftheinternet.html">Future of the Internet</a></li>
-<li><a href="glossary.html">Glossary</a></li>
-
-<li><a href="workcited.html">Works Cited</a></li>
- 
-</ul>
+	 <ul>
+		<li><a href="home.html">Home</a></li>
+		<li><a href="understandingsemiconductors.html">Understanding Semiconductors and the Supply Chain</a></li>
+		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly in the SSC</a></li>
+		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
+		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href="glossary.html">Glossary</a></li>
+		<li><a href="workcited.html">Works Cited</a></li>
+	 
+	</ul>
 </div>
 
 
 <div id="main-content">
 
 
-<h4>Introduction to Tim Berners-Lee</h4>
-<p>The life of Tim Berners-Lee is one that few people know about.  He is the scientist and inventor who was in the right place at the right time&mdash;at the CERN laboratory in Switzerland in the 1980s&mdash;to both 
-invent the basic technologies and shape the culture that served as the seed crystal for the Internet as we know it today.  Other than the researcher's salary that he was receiving at the time, he never asked for any money for his
-inventions, nor did he patent any of them.  Instead, he shared them so others could improve on his work, and as a result the Internet has evolved into what it is today.  We all know who Bill Gates is and we also know what Steve Jobs 
-gave us; they produced the software and personal computers that we use to connect to the <a href="glossary.html#link9">Internet</a>. However, they did not "invent" the Internet.</p> 
+<h4>Introduction to Semiconductors and the SSC</h4>
+<p>This website hopes to describe the intricate world of semiconductors and their supply chain, emphasizing the critical role they play in modern hardware. The exploration begins with an overview of semiconductors, their fundamental properties, and their widespread applications in various technologies. The semiconductor supply chain's complexity is explained through its several integral parts, including research and development (R&D);  design; fabrication; and assembly, testing, and packaging (ATP).</p>
 
-
-<p class="block" style="position:relative; top:20px;"><a href="inventor.html">Inventor</a>&nbsp;&nbsp;&nbsp;&nbsp; Tim Berners-Lee invented HTML; URIs, which eventually became URLs; browsers; the first server; and HTTP protocols; but he had a problem with patents.</p> 
-
-<p class="block" style="position:relative; top:20px;"><a href="futureoftheinternet.html">Future of the Internet</a>&nbsp;&nbsp;&nbsp;&nbsp; The World Wide Web Consortium (W3C), separation of layers, open source software, and the potential for the abuse of individual privacy rights by companies and governments.</p> 
-
-
-
-
-
+<p>The website goes beyond the technical aspects, shedding light on the importance of semiconductors in the global market. It explores issues of monopoly and duopoly by examining key players like TSMC, Samsung, Intel, and ASML. The analysis extends to the broader market, discussing potential challenges and drawing parallels between semiconductors and the oil industry.</p> 
 
 </div>
-<div id="footer"><p><h6>Copyright&copy;2011 J.D. Applen. All rights reserved.</h6></p></div> 
+<div id="footer"><p><h6>Copyright&copy;2023 Nick Miguel and Carlos Gonzalez. All rights reserved.</h6></p></div> 
 
 </div>
  </body>
