--- a/home.html
+++ b/home.html
@@ -24,11 +24,11 @@
 
 <div id="container">
 <div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
- <div id="menu">
+<div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Understanding Semiconductors and the Supply Chain</a></li>
-		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly in the SSC</a></li>
+		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
 		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
