--- a/sscdiversification.html
+++ b/sscdiversification.html
@@ -45,7 +45,16 @@
 
 <h4>Supply Chain Diversification</h4>
 
-<p>Most of the global semiconductor market share is localized entirely in one region, therefore it is very easy for there to be a collapse or a backup if anything happens in this region. More specifically, &ldquo;more than 65% of the global market share could be held within one region across 50 points in the SSC, regardless of the region&apos;s level of risk&rdquo; [4]. Therefore, the best path to take would be to try and diversify the different stages of the SSC through onshore investment. </p> 
+<p>Most of the global semiconductor market share is localized entirely in one region, therefore it is very easy for there to be a collapse or a backup if anything happens in this region. More specifically, &ldquo;more than 65% of the global market share could be held within one region across 50 points in the SSC, regardless of the region&apos;s level of risk&rdquo; [4]. Therefore, the best path to take would be to try and diversify the different stages of the SSC through onshore investment. </p>
+
+<div class="imagerightcaption" style="width:300px;">
+
+<img src="Importers-of-Semiconductor-Devices-2021-Click-to-Select-a-Country.png" width="300px" height="300px"  alt="Framework for supply chain resilience"/>
+
+</a>Figure 10: Percent of semiconductor imports by country (2021)<br>
+Source: Adapted from [10]<br><br>
+
+</div>
 
 <p>To preface, the US was the 3rd largest importer of semiconductors in 2021 (Figure 6) [19]. The US has a major dependency on other countries when it comes to semiconductors and semiconductor production. In addition to this dependency, the US is also the 4th largest producer of semiconductors. In general, the US imports more semiconductors than it exports. Specifically, the US imports $12.3B worth of semiconductor devices vs a mere $5.99B in exports. Given these two facts, the US is almost completely dependent on other countries for its supply of semiconductors. </p>
 
