--- a/chainresilience.html
+++ b/chainresilience.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Tim Berners-Lee</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -22,52 +22,56 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
 
 <div id="breadcrumbs">
 	<a href="home.html">Home</a>&rarr; 
-	<a href="whataresemiconductors.html"><b>Creating Chain Resilience</b></a>&rarr; 
-	<a href="semiconductoruse.html">Favoring Vertical Integration</a>&rarr; 
-	<a href="semiconductorimportance.html">Government Intervention</a>&rarr;
-	<a href="">Enhance Visibility</a>&rarr;
-	<a href="">Supply Chain Diversification</a>
+	<a href="chainresilience.html"><b>Creating Chain Resilience</b></a>&rarr; 
+	<a href="favoring.html">Favoring Vertical Integration</a>&rarr; 
+	<a href="govtintervention.html">Government Intervention</a>&rarr;
+	<a href="enhancevisibility.html">Enhance Visibility</a>&rarr;
+	<a href="sscdiversification.html">Supply Chain Diversification</a>
 </div>
 
 <div id="main-content">
 
 <h4>Creating Chain Resilience</h4>
 
-<p>The current SSC model is relatively weak, so strengthening the SSC such that it is able to resist difficult times would help alleviate many issues. A resilient chain would be able to come back if there are any issues in any of the links, and it could even help to prevent many of the more severe issues. In general, the parts to building chain resilience are as follows: mitigation, preparedness, response, and awareness. [15] Each of these parts can be further divided. Mitigation includes hardening and diversification; preparedness consists of inventory buffering, capacity buffering, contingency planning, and readiness; response includes prophylaxis, demand reduction, and supply increase; and awareness comprises transparency, analytics, and communication (Figure 3 details the framework for supply chain resilience). </p> 
+<p>The current <a href="glossary.html#SSC">SSC</a> model is relatively weak, so strengthening the SSC such that it is able to resist difficult times would help alleviate many issues. A resilient chain would be able to come back if there are any issues in any of the links, and it could even help to prevent many of the more severe issues. In general, the parts to building chain resilience are as follows: mitigation, preparedness, response, and awareness. <a href="workscited.html#source15">[15]</a> Each of these parts can be further divided. Mitigation includes hardening and diversification; preparedness consists of inventory buffering, capacity buffering, contingency planning, and readiness; response includes prophylaxis, demand reduction, and supply increase; and awareness comprises transparency, analytics, and communication (<a href="#Figure8">Figure 8</a> details the framework for supply chain resilience). </p> 
 
 <div class="imagerightcaption" style="width:400px;">
 
+<a id="Figure8">
+
 <img src="resilience.png" width="400px" height="210px"  alt="Framework for supply chain resilience"/>
 
+</a>
+
 </a>Figure 8: Framework for supply chain resilience<br>
-Source: Adapted from [7]<br><br>
+Source: Adapted from <a href="workscited.html#source7">[7]</a><br><br>
 
 </div>
 
 <h6>Mitigation</h6>
-<p>In the mitigation stage, the goal is to either prevent disruptive events from occurring, or reduce their size and consequences should they occur. The measures used to prevent or reduce a disruptive event are known as hardening measures, while the measures used to increase system reliability by adding parallel failure modes are known as diversification measures [15]. In Figure 4, hardening takes place before diversification, which is an accurate portrayal given their meanings. The first step of mitigation involves trying to prevent the event from happening. In the case that that doesn&apos;t work, diversification allows for any damage to have a diminished impact. </p> 
+<p>In the mitigation stage, the goal is to either prevent disruptive events from occurring, or reduce their size and consequences should they occur. The measures used to prevent or reduce a disruptive event are known as hardening measures, while the measures used to increase system reliability by adding parallel failure modes are known as diversification measures <a href="workscited.html#source15">[15]</a>. In <a href="#Figure8">Figure 8</a>, hardening takes place before diversification, which is an accurate portrayal given their meanings. The first step of mitigation involves trying to prevent the event from happening. In the case that that doesn&apos;t work, diversification allows for any damage to have a diminished impact. </p> 
 
 <h6>Preparedness</h6>
-<p>After a disruption occurs, the preparedness stage aimsto prevent the event from creating a shortage, or to reduce the intensity of the shortage. This can be achieved through inventory buffering, capacity buffering, contingency planning, and readiness. Inventory buffering and capacity buffering are regarded as physical inventory and virtual inventory, respectively. Inventory buffering is &ldquo;immediately available to compensate for a shortage&rdquo; [15]. On the other hand, capacity buffering involves using pre-existing physical assets that are engaged to produce inventory [15]. For the most part, prophylaxis is not used in readiness for the SSC because it has to do with preventing disease. </p>
-<p>Whereas inventory and capacity buffering deals with the immediate inventory, contingency planning and readiness deals with what to do with that inventory after a shortage has occurred. Contingency planning and readiness are also thought of as virtual capacity/inventory. It involves finding a way to produce inventory should there be a lack of immediately available capacity [15]. Readiness refers to the general preparatory measures which will facilitate planning future actions in times of need. </p>
+<p>After a disruption occurs, the preparedness stage aimsto prevent the event from creating a shortage, or to reduce the intensity of the shortage. This can be achieved through inventory buffering, capacity buffering, contingency planning, and readiness. Inventory buffering and capacity buffering are regarded as physical inventory and virtual inventory, respectively. Inventory buffering is &ldquo;immediately available to compensate for a shortage&rdquo; <a href="workscited.html#source15">[15]</a>. On the other hand, capacity buffering involves using pre-existing physical assets that are engaged to produce inventory <a href="workscited.html#source15">[15]</a>. For the most part, prophylaxis is not used in readiness for the SSC because it has to do with preventing disease. </p>
+<p>Whereas inventory and capacity buffering deals with the immediate inventory, contingency planning and readiness deals with what to do with that inventory after a shortage has occurred. Contingency planning and readiness are also thought of as virtual capacity/inventory. It involves finding a way to produce inventory should there be a lack of immediately available capacity <a href="workscited.html#source15">[15]</a>. Readiness refers to the general preparatory measures which will facilitate planning future actions in times of need. </p>
  
 <h6>Response</h6>
 <p>The response stage aims to prevent a shortage from harming people, or to reduce the severity of the harm that is inflicted. The main two methods in this stage are demand reduction and supply increase. When companies have limited resources, demand reduction can be used to prevent mass shortages of products. On the other hand, if a company is able to increase their supply prior to the shortage, then the overall severity of the shortage is mitigated. </p> 
 
 <h6>Awareness</h6>
-<p>Finally, the awareness stage is the foundation for the previous three stages. Mitigation, protection, and response all require information, so awareness is the stage that provides that information. Transparency is the measures that make the appropriate data available, analytic measures process data into information, and communication measures share the information with those that will make the decisions [15]. </p>
+<p>Finally, the awareness stage is the foundation for the previous three stages. Mitigation, protection, and response all require information, so awareness is the stage that provides that information. Transparency is the measures that make the appropriate data available, analytic measures process data into information, and communication measures share the information with those that will make the decisions <a href="workscited.html#source15">[15]</a>. </p>
 <p>The following solutions all help to increase chain resilience. All of the solutions either include every stage mentioned prior, or they are one of the stages which works with another in tandem to solve the problem of semiconductor shortage. </p>
 
 </div>
