--- a/enhancevisibility.html
+++ b/enhancevisibility.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -45,8 +45,9 @@
 
 <h4>Use Technology to Enhance Visibility and the SSC</h4>
 
-<p>As mentioned in the overview for creating chain resilience, information (awareness) guides the other stages, so by gathering information using modern data analysis tools regions would be able to better prepare for future shortages. The Internet of Things (IoT) is &ldquo;a network of interrelated devices that connect and exchange data with other IoT devices and the cloud&rdquo; [18]. When applied to the SSC, the IoT can be used to predict disruptions by using real-time data sharing and analysis [4]. This data can be used in the preparedness stage of creating chain resilience. By having the data and predictions available, those in power will be able to make the correct decisions to mitigate any potential damages or shortages. </p> 
-<p>In addition to the IoT, AI has also begun to be used to scan for chip defects and reduce lead times of chip production [4]. Using AI to scan for chip defects in real-time would allow for an improvement in the quality control process [4]. By using AI to also reduce the lead times of chip production, the overall process can be reduced. For example, it takes approximately 6 months for humans to build a processor, but AI can do it in significantly less time [4]. </p>
+<p>As mentioned in the overview for creating chain resilience, information (awareness) guides the other stages, so by gathering information using modern data analysis tools regions would be able to better prepare for future shortages. The <a href="glossary.html#IOT">Internet of Things (IoT)</a> is &ldquo;a network of interrelated devices that connect and exchange data with other IoT devices and the cloud&rdquo; <a href="workscited.html#source18">[18]</a>. When applied to the <a href="glossary.html#SSC">SSC</a>, the IoT can be used to predict disruptions by using real-time data sharing and analysis <a href="workscited.html#source4">[4]</a>. This data can be used in the preparedness stage of creating chain resilience. By having the data and predictions available, those in power will be able to make the correct decisions to mitigate any potential damages or shortages. </p> 
+
+<p>In addition to the IoT, AI has also begun to be used to scan for chip defects and reduce lead times of chip production <a href="workscited.html#source4">[4]</a>. Using AI to scan for chip defects in real-time would allow for an improvement in the quality control process <a href="workscited.html#source4">[4]</a>. By using AI to also reduce the lead times of chip production, the overall process can be reduced. For example, it takes approximately 6 months for humans to build a processor, but AI can do it in significantly less time <a href="workscited.html#source4">[4]</a>. </p>
 
 </div>
 
