--- a/sscdiversification.html
+++ b/sscdiversification.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -45,22 +45,26 @@
 
 <h4>Supply Chain Diversification</h4>
 
-<p>Most of the global semiconductor market share is localized entirely in one region, therefore it is very easy for there to be a collapse or a backup if anything happens in this region. More specifically, &ldquo;more than 65% of the global market share could be held within one region across 50 points in the SSC, regardless of the region&apos;s level of risk&rdquo; [4]. Therefore, the best path to take would be to try and diversify the different stages of the SSC through onshore investment. </p>
+<p>Most of the global <a href="glossary.html#Semiconductor">semiconductor</a> market share is localized entirely in one region, therefore it is very easy for there to be a collapse or a backup if anything happens in this region. More specifically, &ldquo;more than 65% of the global market share could be held within one region across 50 points in the <a href="glossary.html#SSC">SSC</a>, regardless of the region&apos;s level of risk&rdquo; <a href="workscited.html#source4">[4]</a>. Therefore, the best path to take would be to try and diversify the different stages of the SSC through onshore investment. </p>
 
 <div class="imagerightcaption" style="width:300px;">
 
+<a id="Figure10">
+
 <img src="Importers-of-Semiconductor-Devices-2021-Click-to-Select-a-Country.png" width="300px" height="300px"  alt="Framework for supply chain resilience"/>
 
+</a>
+
 </a>Figure 10: Percent of semiconductor imports by country (2021)<br>
-Source: Adapted from [10]<br><br>
+Source: Adapted from <a href="workscited.html#source10">[10]</a><br><br>
 
 </div>
 
-<p>To preface, the US was the 3rd largest importer of semiconductors in 2021 (Figure 6) [19]. The US has a major dependency on other countries when it comes to semiconductors and semiconductor production. In addition to this dependency, the US is also the 4th largest producer of semiconductors. In general, the US imports more semiconductors than it exports. Specifically, the US imports $12.3B worth of semiconductor devices vs a mere $5.99B in exports. Given these two facts, the US is almost completely dependent on other countries for its supply of semiconductors. </p>
+<p>To preface, the US was the 3rd largest importer of semiconductors in 2021 (<a href="#Figure10">Figure 10</a>) <a href="workscited.html#source19">[19]</a>. The US has a major dependency on other countries when it comes to semiconductors and semiconductor production. In addition to this dependency, the US is also the 4th largest producer of semiconductors. In general, the US imports more semiconductors than it exports. Specifically, the US imports $12.3B worth of semiconductor devices vs a mere $5.99B in exports. Given these two facts, the US is almost completely dependent on other countries for its supply of semiconductors. </p>
 
-<p>Onshore investment involves making countries more independent from other countries in order to avoid shortages in the future. For example, during the COVID-19 pandemic of 2020, Tesla was able to increase car sales by 100% from 2020 to 2021 even though there was a chip shortage [4]. This was due to Tesla creating their chips in-house, as well as rewriting software to work better with different manufacturers. By taking processes of the SSC and bringing them into the country, the US and other countries would be able to mitigate the magnitude of a shortage because of problems at any of the links. </p>
+<p>Onshore investment involves making countries more independent from other countries in order to avoid shortages in the future. For example, during the COVID-19 pandemic of 2020, Tesla was able to increase car sales by 100% from 2020 to 2021 even though there was a chip shortage <a href="workscited.html#source4">[4]</a>. This was due to Tesla creating their chips in-house, as well as rewriting software to work better with different manufacturers. By taking processes of the SSC and bringing them into the country, the US and other countries would be able to mitigate the magnitude of a shortage because of problems at any of the links. </p>
 
-<p>Although self-sufficiency sounds like the best answer, due to the geopolitical implications and the financial ramifications it is practically infeasible. For instance, trying to bring semiconductor production into a country through onshore investment would be incredibly costly. In order for countries to be completely self-sufficient, each country would need to have &ldquo;local firms in EDA and IP cores, design semiconductors, manufacture all specialized equipment, have all raw materials, carry out front-end and back-end manufacturing, and ensure enough capacity to meet 100% of domestic demand for semiconductors across all applications&rdquo; [4]. According to Mohammad, Elmori, and Kerbache [4], independence to this extent would cost somewhere from $900 to $1,255 billion at a global level. In addition to the cost itself, complete self-sufficiency would require countries to build 40% of the existing globally capacity. This would lead to a massive overcapacity of semiconductors and semiconductor materials [4]. Furthermore, in order for the capacity of each region to cover the entire local semiconductor requirements, it would cost &ldquo;over $800 billion in capital expenditure&rdquo; [4]. Should a region be able to gather the funds to build the necessary facilities, it would take years and anywhere from 3000 to 6000 employees made up mostly of skilled technicians and staff [4]. There are also at least 30 types of semiconductors available in the market, so each region would have to match its competitors in each semiconductor. Ultimately, complete self-sufficiency is not the answer, but that&apos;s not to say that vertical integration would not help, as explained previously. </p>
+<p>Although self-sufficiency sounds like the best answer, due to the geopolitical implications and the financial ramifications it is practically infeasible. For instance, trying to bring semiconductor production into a country through onshore investment would be incredibly costly. In order for countries to be completely self-sufficient, each country would need to have &ldquo;local firms in EDA and <a href="glossary.html#IP">IP</a> cores, design semiconductors, manufacture all specialized equipment, have all raw materials, carry out front-end and back-end manufacturing, and ensure enough capacity to meet 100% of domestic demand for semiconductors across all applications&rdquo; <a href="workscited.html#source4">[4]</a>. According to Mohammad, Elmori, and Kerbache <a href="workscited.html#source4">[4]</a>, independence to this extent would cost somewhere from $900 to $1,255 billion at a global level. In addition to the cost itself, complete self-sufficiency would require countries to build 40% of the existing globally capacity. This would lead to a massive overcapacity of semiconductors and semiconductor materials <a href="workscited.html#source4">[4]</a>. Furthermore, in order for the capacity of each region to cover the entire local semiconductor requirements, it would cost &ldquo;over $800 billion in capital expenditure&rdquo; <a href="workscited.html#source4">[4]</a>. Should a region be able to gather the funds to build the necessary facilities, it would take years and anywhere from 3000 to 6000 employees made up mostly of skilled technicians and staff <a href="workscited.html#source4">[4]</a>. There are also at least 30 types of semiconductors available in the market, so each region would have to match its competitors in each semiconductor. Ultimately, complete self-sufficiency is not the answer, but that&apos;s not to say that vertical integration would not help, as explained previously. </p>
 
 </div>
 
