--- a/favoring.html
+++ b/favoring.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -45,9 +45,9 @@
 
 <h4>Favoring Vertical Integration vs. Horizontal Integration</h4>
 
-<p>The current model of the SSC is distributed across multiple countries, which can help with production, but it ends up harming the SSC in problematic times. In the context of a supply chain, vertical integration refers to &ldquo;a business strategy where the business itself controls the supply chain and multiple stages of its production process&rdquo; [16]. On the other hand, horizontal integration is a growth strategy where a business takes over another company that operates at the same value chain level (offer similar or the same goods and services, and also deal with similar customer bases) [17]. Favoring vertical integration would allow multiple companies to work almost independently of each other due to already controlling more stages of the production process. In this case, any failure at any level of the stream would cause the business to fall, rather than the entire supply chain. However, if the businesses in the SSC were to favor horizontal integration, a failure at any level of the SSC would cause shortages throughout, just as we have seen already. </p> 
+<p>The current model of the <a href="glossary.html#SSC">SSC</a> is distributed across multiple countries, which can help with production, but it ends up harming the SSC in problematic times. In the context of a supply chain, vertical integration refers to &ldquo;a business strategy where the business itself controls the supply chain and multiple stages of its production process&rdquo; <a href="workscited.html#source16">[16]</a>. On the other hand, horizontal integration is a growth strategy where a business takes over another company that operates at the same value chain level (offer similar or the same goods and services, and also deal with similar customer bases) <a href="workscited.html#source17">[17]</a>. Favoring vertical integration would allow multiple companies to work almost independently of each other due to already controlling more stages of the production process. In this case, any failure at any level of the stream would cause the business to fall, rather than the entire supply chain. However, if the businesses in the SSC were to favor horizontal integration, a failure at any level of the SSC would cause shortages throughout, just as we have seen already. </p> 
 
-<p>For example, most semiconductors are produced in Taiwan by TSMC. If anything fails in Taiwan, then the whole chain gets backed up because the grand majority of semiconductors produced would no longer exist. On the other hand, if other companies or even countries outside of Taiwan were to increase their “fabs”, then any problems in Taiwan would disrupt the SSC on a smaller magnitude. </p>
+<p>For example, most semiconductors are produced in Taiwan by <a href="glossary.html#TSMC">TSMC</a>. If anything fails in Taiwan, then the whole chain gets backed up because the grand majority of semiconductors produced would no longer exist. On the other hand, if other companies or even countries outside of Taiwan were to increase their &ldquo;fabs&rdquo;, then any problems in Taiwan would disrupt the SSC on a smaller magnitude. </p>
 
 </div>
 
