--- a/govtintervention.html
+++ b/govtintervention.html
@@ -22,10 +22,10 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
 		<li><a href="workcited.html">Works Cited</a></li>
 	 
@@ -45,7 +45,7 @@
 
 <h4>Government Intervention</h4>
 
-<p>Similar to the way the government intervenes in the market, the same thing can be applied to the SSC with government support in different countries. Governments are using capacity and inventory buffering to prepare for future shortages [4]. Figure 5 details some of the plans that governments in different countries have done in order to fortify their native semiconductor supply. </p> 
+<p>Similar to the way the government intervenes in the market, the same thing can be applied to the SSC with government support in different countries. Governments are using capacity and inventory buffering to prepare for future shortages <a href="workscited.html#source4">[4]</a>. <a href="#Figure9">Figure 9</a> details some of the plans that governments in different countries have done in order to fortify their native semiconductor supply. </p> 
 
 <br>
 
@@ -78,8 +78,8 @@
 		<th>India</th>
 		<th>Facilitate semiconductor manufacturing start-ups by introducing &ldquo;Semiconductor Startup Incubation and Acceleration Programme&rdquo;</th>
 	</tr>
-</table>Figure 9: Government policies and interventions to deal with semiconductor shortage crisis<br>
-Source: Adapted from [4]<br>
+</table><a id="Figure9">Figure 9: Government policies and interventions to deal with semiconductor shortage crisis<br>
+Source: Adapted from <a href="workscited.html#source4">[4]</a></a><br>
 
 </div>
 
