--- a/home.html
+++ b/home.html
@@ -27,12 +27,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
