--- a/semiconductorimportance.html
+++ b/semiconductorimportance.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -44,9 +44,9 @@
 
 <h4>Why Are Semiconductors and the SSC Important?</h4>
 
-<p>The power to conduct currents at a nanoscopic scale absolutely revolutionized technology. For example, if we did not have semiconductors, cars would not be able to calculate routes, receive calls, or display what music you are listening to, as well as other functions. In addition to these luxuries, without semiconductors cars would be unable to return any information about how fast you are driving on the user interface, pressure in the tires, or problems with the motor. </p> 
+<p>The power to conduct currents at a nanoscopic scale absolutely revolutionized technology. For example, if we did not have <a href="glossary.html#Semiconductor">semiconductors</a>, cars would not be able to calculate routes, receive calls, or display what music you are listening to, as well as other functions. In addition to these luxuries, without semiconductors cars would be unable to return any information about how fast you are driving on the user interface, pressure in the tires, or problems with the motor. </p> 
 
-<p>The SSC is the main method for producing and distributing semiconductors, as previously discussed. The SSC shortage that the world has experienced lately has been felt by many, especially in the wake of COVID-19. <p class="leftpquote">"With more people moving to an online setting and factories shutting down as well as countries closing borders, companies could not keep up with the demand of the times. . . ."</p> As a result, many products were unable to be produced as much as they were demanded. More specifically the following industries and sectors suffered as a result of the SSC shortage: computers, smartphones, televisions, cameras, printers, gaming, health, Internet of Things (IoT), automotive, and the government [4]. The consumer demand created mass shortage in industries relating to consumers. For example, &ldquo;in 2020, smartphone sales fell by 12.5%&rdquo;, and &ldquo;Samsung canceled the Galaxy Note series due to a semiconductor shortage&rdquo; [4]. Another example would be the health sector. Many medical equipment were not able to be used because the semiconductors required to produce these pieces of equipment could not be created nor distributed. These pieces of medical equipment cannot be substituted with anything else [4].</p>
+<p>The <a href="glossary.html#SSC">SSC</a> is the main method for producing and distributing semiconductors, as previously discussed. The SSC shortage that the world has experienced lately has been felt by many, especially in the wake of COVID-19. &ldquo;With more people moving to an online setting and factories shutting down as well as countries closing borders, companies could not keep up with the demand of the times.&rdquo;<p class="leftpquote">"With more people moving to an online setting and factories shutting down as well as countries closing borders, companies could not keep up with the demand of the times. . . ."</p> As a result, many products were unable to be produced as much as they were demanded. More specifically the following industries and sectors suffered as a result of the SSC shortage: computers, smartphones, televisions, cameras, printers, gaming, health, <a href="glossary.html#IOT">Internet of Things (IoT)</a>, automotive, and the government <a href="workcited.html#source4">[4]</a>. The consumer demand created mass shortage in industries relating to consumers. For example, &ldquo;in 2020, smartphone sales fell by 12.5%&rdquo;, and &ldquo;Samsung canceled the Galaxy Note series due to a semiconductor shortage&rdquo; <a href="workscited.html#source4">[4]</a>. Another example would be the health sector. Many medical equipment were not able to be used because the semiconductors required to produce these pieces of equipment could not be created nor distributed. These pieces of medical equipment cannot be substituted with anything else <a href="workscited.html#source4">[4]</a>.</p>
 
 <p>In addition to the individual examples, many universities are very tech-oriented, or at the very least tech-centered. Almost every university now uses some sort of computer, whether for the students, teachers, or school management. Without semiconductors, universities would feel a massive absence. Everything from no longer being able to work online, manage grades, post announcements for students, or even no longer being able to have smartphones. </p>
 
