--- a/semiconductoruse.html
+++ b/semiconductoruse.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Tim Berners-Lee</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Understanding Semiconductors and the Supply Chain</a></li>
-		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly in the SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -38,20 +38,21 @@
 	<a href="whataresemiconductors.html">What Are Semiconductors</a>&rarr; 
 	<a href="semiconductoruse.html"><b>What Are Semiconductors Used For</b></a>&rarr; 
 	<a href ="whatisssc.html">What Is the SSC</a>&rarr; 
-	<a href="semiconductorimportance.html">Why Are Semiconductors and the SSC Important</a></div>
+	<a href="semiconductorimportance.html">Why Are Semiconductors and the SSC Important</a>
+</div>
 
 <div id="main-content">
 
 <h4>What Are Semiconductors Used For?</h4>
 
-<p>Seeing how powerful semiconductors are, it is easy to understand why they are featured in almost every piece of modern technology. Examples of technology that use semiconductors include computers, cars, sensors, solar cells, and LEDs to name a few. As mentioned before, semiconductors allow for currents to pass through to create true or false values. This function is what allows so many computations to be executed on many devices. The following list provides examples for the specific functions of semiconductors in the aforementioned examples:</p> 
+<p>Seeing how powerful <a href="glossary.html#Semiconductor">semiconductors</a> are, it is easy to understand why they are featured in almost every piece of modern technology. Examples of technology that use semiconductors include computers, cars, sensors, solar cells, and LEDs to name a few. As mentioned before, semiconductors allow for currents to pass through to create true or false values. This function is what allows so many computations to be executed on many devices. The following list provides examples for the specific functions of semiconductors in the aforementioned examples:</p> 
 
 <ul>
 	<li>LEDs emit light when a voltage is applied, and semiconductors allow currents to be channeled into the device in order to apply a voltage.</li>
-	<li>Most modern cars now have a computer that functions as the main “brain” of the machine.</li>
+	<li>Most modern cars now have a computer that functions as the main &ldquo;brain&rdquo; of the machine.</li>
 	<li>Phones and computers utilize semiconductors to perform calculations and retrieve data from memory.</li>
 	<li>Semiconductors allow sensors to be smaller, respond faster, and be more sensitive.</li>
-	<li>In a solar cell, semiconductors &ldquo;absorb the light&apos;s energy and transfer it to negatively charged particles in the material called electrons&rdquo; [1].</li>
+	<li>In a solar cell, semiconductors &ldquo;absorb the light&apos;s energy and transfer it to negatively charged particles in the material called electrons&rdquo; <a href="glossary.html#source1">[1].</li>
 </ul>
 
 </div>
