--- a/whataresemiconductors.html
+++ b/whataresemiconductors.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
 		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -35,73 +35,18 @@
 
 <div id="breadcrumbs">
 	<a href="home.html">Home</a>&rarr; 
-	<a href="whataresemiconductors.html">What Are Semiconductors</a>&rarr; 
-	<a href="semiconductoruse.html">What Are Semiconductors Used For</a>&rarr; 
-	<a href ="whatisssc.html"><b>What Is the SSC</b></a>&rarr; 
+	<a href="whataresemiconductors.html"><b>What Are Semiconductors</b></a>&rarr; 
+	<a href="semiconductoruse.html">What Are Semiconductors Used For</a>&rarr; <a href ="whatisssc.html">What Is the SSC</a>&rarr; 
 	<a href="semiconductorimportance.html">Why Are Semiconductors and the SSC Important</a>
 </div>
 
 <div id="main-content">
 
-<h4>What Is the SSC?</h4>
+<h4>What Are Semiconductors?</h4>
 
-<p>Semiconductors are incredibly important and complex pieces of equipment, and their distribution is equally complex. The main method for distributing semiconductors is called the <a href="glossary.html#SSC">semiconductor supply chain</a>. A supply chain is composed of multiple interconnected parts, oftentimes at an international level, where each part supplies another part, or link, with the necessary materials to advance the production of the product. Similarly, a value chain refers to the same process as the supply chain, however a supply chain refers to the actual materials used whereas the value chain refers to the distribution of the processes, such as design, fabrication, testing, etc. The semiconductor supply chain (SSC) is largely composed of the following countries: the United States, Japan, Europe (Netherlands, United Kingdom, Germany), Taiwan, South Korea, and China (Figure 1 details a breakdown of semiconductor sales by country, Figure 2 details the distribution of semiconductor fabrication plants) [2]. The SSC is composed of seven parts: research and development (R&D); design; fabrication; assembly, testing, and packaging; electronic design automation and core IP; semiconductor manufacturing equipment (SME); materials; and end use [2]. Design, fabrication, and assembly, testing, and packaging all are classified as chip production, whereas electronic design automation and core IP, SME, and materials are classified as inputs to chip production.</p> 
-
-<div class="imageleftcaption" style="width:330px;">
-
-<img src="semiconductorsales.png" width="330px" height="220px"  alt="Total Semiconductor Sales by Country in 2021"/>
-
-</a>Figure 1: Semiconductor sales by country (2021, in billions).<br> 
-Source: Adapted from [3]<br>
-Note: The total semiconductor sales in 2021 was $555.9 million.<br><br>
+<p>The word &ldquo;<a href="glossary.html#Semiconductor">semiconductor</a>&rdquo; is a term that many have heard, yet it is rarely elaborated on. A semiconductor is the base component for all computers. They are used in every piece of equipment that processes information, and they are in every individual component of a computer. The smallest individual semiconductor piece is called a <a href="glossary.html#Transistor">transistor</a>. A transistor is a circuit that either stops or passes current, which creates true or false values that can perform any type of computation. While their function has not changed since the first solid state transistor were created in the 1940s, technological advancement has been focused on the number of transistors that can be used at once. The number of transistors is called the amount of &ldquo;computing power&rdquo; you have. Technological progress has been centered on fitting as many transistors on a single component, or a chip, forcing the transistors to be smaller and smaller in order to have access to more compute. Current technology is at the &ldquo;3 nanometer (nm)&rdquo; scale, where a single transistor can be the size of 40 nm, or 40 billionths of a meter. For reference, a single human hair is anywhere from 50,000 nm to 100,000 nm. </p> 
 
 </div>
-
-<h6>R&D</h6>
-<p>R&D is the step that advances all of the other links. Without it, the same product would be continuously produced. Design and electronic design and core IP are dependent on R&D to maintain the most up-to-date technology. </p> 
-
-<h6>Design and Electronic Design Automation and Core IP</h6>
-<p>Design will determine how a chip should operate in the system that uses it (specification), create a schematic model of interconnected electrical components (logic design), translate this model to a physical layout of electrical components (physical design), and interconnect the wires that connect components. Finally, validation and verification will ensure that the chips based on the aforementioned design will operate as they should.
-Electronic Design Automation (EDA) is a software used to design chips and to manage the complexity of computer chips. Core IP (intellectual property) is made up of modular portions of designs which are able to be reused. EDA and Core IP are both used in Design (2a) as well. </p>
-
-<div class="imagerightcaption" style="width:330px;">
-
-<img src="semiconductordistribution.png" width="330px" height="220px"  alt="Distribution of semiconductor fabrication plants by country in Dec. 2022"/>
-
-</a>Figure 2: Distribution of semiconductor fabrication plants by country in Dec. 2022.<br>
-Source: Adapted from [5]<br><br>
-
-</div>
- 
-<h6>Fabrication</h6>
-<p>Fabrication is the process which turns the designs into chips. Fabrication also relies on various SME and materials. The first step involves using a furnace to form a cylinder of some semiconducting material, such as silicon. These cylinders are then cut into disc-shaped wafers (Figure 3) which are used by semiconductor fabrication facilities (&ldquo;fabs&rdquo;) to make chips in them [2]. In order to make the chips in the wafers, &ldquo;fabs&rdquo; form transistors as well as other electrical devices in the material layers within the silicon [2]. &ldquo;Fabs&rdquo; also form metal interconnects which go between the electrical devices in the insulation layers above the silicon [2]. The process to design is as so:</p>
-
-<ol>
-	<li>Add a film of material using deposition tools to form the basis of a new permanent layer. </li>
-	<li>Draw circuit patterns in the layer using a process called photolithography. </li>
-	<li>Pass light with a photolithography tool through a photomask to transfer that pattern to a photoresist. </li>
-	<li>Carve the newly created pattern in the photoresist into the permanent layer below the photoresist using etching tools. </li>
-	<li>Remove the photoresist. </li>
-	<li>Clean the etched material off of the layer. </li>
-	<li>Flatten the completed layer using chemical mechanical planarization. </li>
-	<li>Start again. </li>
-</ol>
-
-<div class="imageleftcaption" style="width:220px;">
-
-<img src="wafer.jpg" width="220px" height="146px"  alt="Polished wafers for semiconductors"/>
-
-</a>Figure 3: Polished wafers<br>
-Source: Adapted from [6]<br><br>
-
-</div>
-
-<h6>Assembly, Testing, and Packaging (ATP)</h6>
-<p>ATP creates a packaged chip by cutting a finished wafer into separate chips. Each chip produced is then mounted on a frame with wire which connects the chip to external devices. These chips are also enclosed in a protective casing [2].</p> 
-
-<h6>End Use</h6>
-<p>End use consists of distribution of the chips for integration into products. These products range from smartphones and laptops to servers and automobiles [2].</p>
-
 </div>
 
 <div id="footer"><h6>Copyright&copy;2023 Nick Miguel and Carlos Gonzalez. All rights reserved.</h6></div>
