--- a/whatisssc.html
+++ b/whatisssc.html
@@ -22,12 +22,12 @@
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
-		<li><a href="understandingsemiconductors.html">Understanding Semiconductors and the Supply Chain</a></li>
-		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly in the SSC</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
 		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
-		<li><a href ="possiblesolutions.html">Possible Solutions</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
 		<li><a href="glossary.html">Glossary</a></li>
-		<li><a href="workcited.html">Works Cited</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
 </div>
@@ -45,42 +45,46 @@
 
 <h4>What Is the SSC?</h4>
 
-<p>Semiconductors are incredibly important and complex pieces of equipment, and their distribution is equally complex. The main method for distributing semiconductors is called the semiconductor supply chain. A supply chain is composed of multiple interconnected parts, oftentimes at an international level, where each part supplies another part, or link, with the necessary materials to advance the production of the product. Similarly, a value chain refers to the same process as the supply chain, however a supply chain refers to the actual materials used whereas the value chain refers to the distribution of the processes, such as design, fabrication, testing, etc. The semiconductor supply chain (SSC) is largely composed of the following countries: the United States, Japan, Europe (Netherlands, United Kingdom, Germany), Taiwan, South Korea, and China (Figure 1 details a breakdown of semiconductor sales by country, Figure 2 details the distribution of semiconductor fabrication plants) [2]. The SSC is composed of seven parts: research and development (R&D); design; fabrication; assembly, testing, and packaging; electronic design automation and core IP; semiconductor manufacturing equipment (SME); materials; and end use [2]. Design, fabrication, and assembly, testing, and packaging all are classified as chip production, whereas electronic design automation and core IP, SME, and materials are classified as inputs to chip production.</p> 
+<p><a href="glossary.html#Semiconductor">Semiconductors</a> are incredibly important and complex pieces of equipment, and their distribution is equally complex. The main method for distributing semiconductors is called the <a href="glossary.html#SSC">semiconductor supply chain</a>. A supply chain is composed of multiple interconnected parts, oftentimes at an international level, where each part supplies another part, or link, with the necessary materials to advance the production of the product. Similarly, a value chain refers to the same process as the supply chain, however a supply chain refers to the actual materials used whereas the value chain refers to the distribution of the processes, such as design, fabrication, testing, etc. The semiconductor supply chain (SSC) is largely composed of the following countries: the United States, Japan, Europe (Netherlands, United Kingdom, Germany), Taiwan, South Korea, and China (<a href="#Figure1">Figure 1</a> details a breakdown of semiconductor sales by country, <a href="#Figure2">Figure 2</a> details the distribution of semiconductor fabrication plants) <a href="workscited.html#source2">[2]</a>. The SSC is composed of seven parts: research and development (R&D); design; fabrication; assembly, testing, and packaging; electronic design automation and core IP; semiconductor manufacturing equipment (SME); materials; and end use <a href="workscited.html#source2">[2]</a>. Design, fabrication, and assembly, testing, and packaging all are classified as chip production, whereas electronic design automation and core IP, SME, and materials are classified as inputs to chip production.</p> 
 
 <div class="imageleftcaption" style="width:330px;">
 
+<a id="Figure1">
+
 <img src="semiconductorsales.png" width="330px" height="220px"  alt="Total Semiconductor Sales by Country in 2021"/>
 
+</a>
+
 </a>Figure 1: Semiconductor sales by country (2021, in billions).<br> 
-Source: Adapted from [3]<br>
+Source: Adapted from <a href="workscited.html#source3">[3]</a><br>
 Note: The total semiconductor sales in 2021 was $555.9 million.<br><br>
 
 </div>
 
 <h6>R&D</h6>
-<p>R&D is the step that advances all of the other links. Without it, the same product would be continuously produced. Design and electronic design and core IP are dependent on R&D to maintain the most up-to-date technology. </p> 
+<p>R&D is the step that advances all of the other links. Without it, the same product would be continuously produced. Design and electronic design and core <a href="glossary.html#IP">IP</a> are dependent on R&D to maintain the most up-to-date technology. </p> 
 
 <h6>Design and Electronic Design Automation and Core IP</h6>
 <p>Design will determine how a chip should operate in the system that uses it (specification), create a schematic model of interconnected electrical components (logic design), translate this model to a physical layout of electrical components (physical design), and interconnect the wires that connect components. Finally, validation and verification will ensure that the chips based on the aforementioned design will operate as they should.
-Electronic Design Automation (EDA) is a software used to design chips and to manage the complexity of computer chips. Core IP (intellectual property) is made up of modular portions of designs which are able to be reused. EDA and Core IP are both used in Design (2a) as well. </p>
+Electronic Design Automation (EDA) is a software used to design chips and to manage the complexity of computer chips. Core IP (intellectual property) is made up of modular portions of designs which are able to be reused. EDA and Core IP are both used in Design as well. </p>
 
 <div class="imagerightcaption" style="width:330px;">
 
 <img src="semiconductordistribution.png" width="330px" height="220px"  alt="Distribution of semiconductor fabrication plants by country in Dec. 2022"/>
 
 </a>Figure 2: Distribution of semiconductor fabrication plants by country in Dec. 2022.<br>
-Source: Adapted from [5]<br><br>
+Source: Adapted from <a href="workscited.html#source5">[5]</a><br><br>
 
 </div>
  
 <h6>Fabrication</h6>
-<p>Fabrication is the process which turns the designs into chips. Fabrication also relies on various SME and materials. The first step involves using a furnace to form a cylinder of some semiconducting material, such as silicon. These cylinders are then cut into disc-shaped wafers (Figure 3) which are used by semiconductor fabrication facilities (&ldquo;fabs&rdquo;) to make chips in them [2]. In order to make the chips in the wafers, &ldquo;fabs&rdquo; form transistors as well as other electrical devices in the material layers within the silicon [2]. &ldquo;Fabs&rdquo; also form metal interconnects which go between the electrical devices in the insulation layers above the silicon [2]. The process to design is as so:</p>
+<p>Fabrication is the process which turns the designs into chips. Fabrication also relies on various SME and materials. The first step involves using a furnace to form a cylinder of some semiconducting material, such as silicon. These cylinders are then cut into disc-shaped wafers (<a href="#Figure3">Figure 3</a>) which are used by semiconductor fabrication facilities (&ldquo;fabs&rdquo;) to make chips in them <a href="workscited.html#source2">[2]</a>. In order to make the chips in the wafers, &ldquo;fabs&rdquo; form <a href="glossary.html#Transistor">transistors</a> as well as other electrical devices in the material layers within the silicon <a href="workscited.html#source2">[2]</a>. &ldquo;Fabs&rdquo; also form metal interconnects which go between the electrical devices in the insulation layers above the silicon <a href="workscited.html#source2">[2]</a>. The process to design is as so:</p>
 
 <ol>
-	<li>Add a film of material using deposition tools to form the basis of a new permanent layer. </li>
-	<li>Draw circuit patterns in the layer using a process called photolithography. </li>
-	<li>Pass light with a photolithography tool through a photomask to transfer that pattern to a photoresist. </li>
-	<li>Carve the newly created pattern in the photoresist into the permanent layer below the photoresist using etching tools. </li>
+	<li>Add a film of material using <a href="glossary.html#DepositionTools">deposition</a> tools to form the basis of a new permanent layer. </li>
+	<li>Draw circuit patterns in the layer using a process called <a href="glossary.html#Photolithography">photolithography</a>. </li>
+	<li>Pass light with a photolithography tool through a <a href="glossary.html#Photomask">photomask</a> to transfer that pattern to a photoresist. </li>
+	<li>Carve the newly created pattern in the photoresist into the permanent layer below the photoresist using <a href="glossary.html#EtchingTools">etching tools</a>. </li>
 	<li>Remove the photoresist. </li>
 	<li>Clean the etched material off of the layer. </li>
 	<li>Flatten the completed layer using chemical mechanical planarization. </li>
@@ -89,18 +93,22 @@ Source: Adapted from [5]<br><br>
 
 <div class="imageleftcaption" style="width:220px;">
 
+<a id="Figure2">
+
 <img src="wafer.jpg" width="220px" height="146px"  alt="Polished wafers for semiconductors"/>
 
+</a>
+
 </a>Figure 3: Polished wafers<br>
-Source: Adapted from [6]<br><br>
+Source: Adapted from <a href="workscited.html#source6">[6]</a><br><br>
 
 </div>
 
 <h6>Assembly, Testing, and Packaging (ATP)</h6>
-<p>ATP creates a packaged chip by cutting a finished wafer into separate chips. Each chip produced is then mounted on a frame with wire which connects the chip to external devices. These chips are also enclosed in a protective casing [2].</p> 
+<p>ATP creates a packaged chip by cutting a finished wafer into separate chips. Each chip produced is then mounted on a frame with wire which connects the chip to external devices. These chips are also enclosed in a protective casing <a href="workscited.html#source2">[2]</a>.</p> 
 
 <h6>End Use</h6>
-<p>End use consists of distribution of the chips for integration into products. These products range from smartphones and laptops to servers and automobiles [2].</p>
+<p>End use consists of distribution of the chips for integration into products. These products range from smartphones and laptops to servers and automobiles <a href="workscited.html#source2">[2]</a>.</p>
 
 </div>
 
