--- a/semiconductoruse.html
+++ b/semiconductoruse.html
@@ -52,13 +52,11 @@
 	<li>Most modern cars now have a computer that functions as the main &ldquo;brain&rdquo; of the machine.</li>
 	<li>Phones and computers utilize semiconductors to perform calculations and retrieve data from memory.</li>
 	<li>Semiconductors allow sensors to be smaller, respond faster, and be more sensitive.</li>
-	<li>In a solar cell, semiconductors &ldquo;absorb the light&apos;s energy and transfer it to negatively charged particles in the material called electrons&rdquo; <a href="glossary.html#source1">[1].</li>
+	<li>In a solar cell, semiconductors &ldquo;absorb the light&apos;s energy and transfer it to negatively charged particles in the material called electrons&rdquo; <a href="workscited.html#source1">[1]</a>.</li>
 </ul>
 
 </div>
 
-
-</div>
 
 <div id="footer"><h6>Copyright&copy;2023 Nick Miguel and Carlos Gonzalez. All rights reserved.</h6></div>
 
