--- a/asml.html
+++ b/asml.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Tim Berners-Lee</title>
+<title>ASML</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -16,7 +16,7 @@
 
 <meta name="keywords" content="Tim Berners-Lee, Berners- Lee, Sir Tim Berners-Lee, URIs, URLs, inventor, invention, inventor of the Internet, Internet, SGML, HTML, URIs, Protocols, HTTP, CERN, W3C, World Wide Web Consortium, privacy, abuse, open source"/> 
 
-<meta name="author" content="J.D. Applen"/>
+<meta name="author" content="Nick Miguel"/>
 
 
 <link rel="stylesheet" type="text/css" href="TBLbreadcrumbs.css"/>
@@ -26,22 +26,22 @@
 <body>
 
 
-
-
-
 <div id="container">
-<div id="header"><img src="TBLimages/ASML-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">ASML Corp.</h1></div>
+<div id="header"><img src="ASML-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">ASML Corp.</h1></div>
  <div id="menu">
- <ul>
- <li><a href="home.html">Home</a></li>
- <li><a href="inventor.html">Inventor</a></li>
- 
- <li><a href="futureoftheinternet.html">Future of the Internet</a></li>
-<li><a href="glossary.html">Glossary</a></li>
+<div id="menu">
+	 <ul>
+		<li><a href="home.html">Home</a></li>
+		<li><a href="whataresemiconductors.html">Semiconductors and SSC</a></li>
+		<li><a href="monopolyandduopoly.html">Monopoly and Duopoly</a></li>
+		<li><a href ="whatcangowrong.html">What Can Go Wrong</a></li>
+		<li><a href ="chainresilience.html">Possible Solutions</a></li>
+		<li><a href="glossary.html">Glossary</a></li>
+		<li><a href="workscited.html">Works Cited</a></li>
+	 
+	</ul>
+</div>
 
-<li><a href="workcited.html">Works Cited</a></li>
- 
-</ul>
 </div>
 
 
@@ -54,7 +54,8 @@
 <p>
 
 Fabrication is not the smallest bottleneck to semiconductor production. Fabs cost tens of billions of dollars because of the extremely advanced photolithography equipment that has to be purchased from other companies. There is only one firm that can provide the Extreme Ultraviolet photolithography, which is the only way that fabs like TSMC and Samsung can etch their complex, nanometer-scale designs. Each of these machines are about the size of a bus and cost as much as $180 million each. Despite their vast importance, only 55 of them are assembled each year, and just over 100 are in use today [9]. 
-This was no small feat of the company, its competitors, Japanese-based Cannon and Nikon, believed EUV lithography to be unattainable and focused their efforts on maximizing the subpar Deep Ultraviolet Lithography, based on lower wavelengths. These companies thought Moore’s Law would end, and ASML is the sole reason why we are able to maintain pace. ASML focused 17 years and billions of dollars in R&D in order to create what the other firms deemed out of reach. The firm is expected to maintain its footing, using its profits to charge ahead to the next iteration of their design, consisting of large equipment to make even smaller etches. This would allow fabs to increase production by fitting even more transistors per square inch of silicon. To enter the EUV lithography market and try to give ASML a competition, it would have to take extensive measures along the lines of these steps below. 
+<br>
+This was no small feat of the company, its competitors, Japanese-based Cannon and Nikon, believed EUV lithography to be unattainable and focused their efforts on maximizing the subpar Deep Ultraviolet Lithography, based on lower wavelengths. These companies thought Moore&apos;s Law would end, and ASML is the sole reason why we are able to maintain pace. ASML focused 17 years and billions of dollars in R&D in order to create what the other firms deemed out of reach. The firm is expected to maintain its footing, using its profits to charge ahead to the next iteration of their design, consisting of large equipment to make even smaller etches. This would allow fabs to increase production by fitting even more transistors per square inch of silicon. To enter the EUV lithography market and try to give ASML a competition, it would have to take extensive measures along the lines of these steps below. 
 
  <ol type="1">
   <li>Perform initial research on the issue and look into what they are going to develop in coming years.</li>
