--- a/asml.html
+++ b/asml.html
@@ -28,7 +28,6 @@
 
 <div id="container">
 <div id="header"><img src="ASML-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">ASML Corp.</h1></div>
- <div id="menu">
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -42,9 +41,15 @@
 	</ul>
 </div>
 
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="tsmc.html">TSMC</a>&rarr; 
+	<a href="samsung.html">Samsung</a>&rarr; 
+	<a href="intel.html">Intel</a>&rarr;
+	<a href="asml.html"><b>ASML</b></a>&rarr;
+	<a href="restofmarket.html">The Rest of the Market</a>
 </div>
-
-
+	
 <div id="main-content">
 
 
