--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <body>
 
 <div id="container">
-<div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
+<div id="header"><img src="HomeImage.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
