--- a/asml.html
+++ b/asml.html
@@ -19,7 +19,7 @@
 <meta name="author" content="Nick Miguel"/>
 
 
-<link rel="stylesheet" type="text/css" href="TBLbreadcrumbs.css"/>
+<link rel="stylesheet" type="text/css" href="stylesheets.css"/>
 
 </head>
  
