--- a/semiconductorsvsoil.html
+++ b/semiconductorsvsoil.html
@@ -30,7 +30,7 @@
 
 
 <div id="container">
-<div id="header"><img src="TBLimages/ASML-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">Semiconductors Vs Oil</h1></div>
+<div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -52,9 +52,11 @@
 <h4>Semiconductors Vs Oil</h4>
 <br>
 
+<p class="rightpquote">"Oil reserves have defined geopolitics for the last five decades. Where the fabs are for a digital future is more important,"</p>
+
 <p>
 
-“Oil reserves have defined geopolitics for the last five decades. Where the fabs are for a digital future is more important,” Intel CEO Pat Gelsinger said before testifying to congress about international chip policy. Disruptions to oil output contributed to large contractions to the economy in recent history [10]. It should be expected that any contraction in the semiconductor supply chain should have the same effect as the 1973 oil crisis; triggering a recession and affecting every American. The important difference between oil and semiconductors is oil has fewer chokepoints by being pumped out of the ground and refined across the entire world. There can be some weaponization through members like OPEC, but they only control around 38% of global production. 
+&ldquo;Oil reserves have defined geopolitics for the last five decades. Where the fabs are for a digital future is more important,&ldquo; Intel CEO Pat Gelsinger said before testifying to congress about international chip policy. Disruptions to oil output contributed to large contractions to the economy in recent history [10]. It should be expected that any contraction in the semiconductor supply chain should have the same effect as the 1973 oil crisis; triggering a recession and affecting every American. The important difference between oil and semiconductors is oil has fewer chokepoints by being pumped out of the ground and refined across the entire world. There can be some weaponization through members like OPEC, but they only control around 38% of global production. 
 Compare that to the semiconductor fabrication industry where the components have to take several steps to be useful, constantly crossing international borders. If any one step of the process cannot be completed, the computer does not get made, and you are left with incomplete silicon. This requires constant coordination from country to country. Chances are your computer you are reading this from has visited more countries than you have [11] , at each point there needs to be trade agreements to allow goods to flow through. 
 
 
