--- a/semiconductorsvsoil.html
+++ b/semiconductorsvsoil.html
@@ -31,6 +31,8 @@
 
 <div id="container">
 <div id="header"><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
+
+
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -44,7 +46,11 @@
 	</ul>
 </div>
 
-
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="semiconductorsvsoil.html"><b>Semiconductors Vs Oil</b></a>&rarr; 
+	<a href="troubleintaiwan.html">Trouble in Taiwan</a>
+</div>
 
 <div id="main-content">
 
