--- a/troubleintaiwan.html
+++ b/troubleintaiwan.html
@@ -30,7 +30,7 @@
 
 
 <div id="container">
-<div id="header"><img src="Flag-Taiwan.webp" height="131" width="200" align="left" alt="Taiwan"/><h1 style="position:relative; top:30px">Trouble in Taiwan</h1></div>
+<div id="header"><img src="Flag-Taiwan.webp" height="131" width="200" align="left" alt="Taiwan"/><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -42,6 +42,12 @@
 		<li><a href="workscited.html">Works Cited</a></li>
 	 
 	</ul>
+</div>
+
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="semiconductorsvsoil.html">Semiconductors Vs Oil</a>&rarr; 
+	<a href="troubleintaiwan.html"><b>Trouble in Taiwan</b></a>
 </div>
 
 
