--- a/restofmarket.html
+++ b/restofmarket.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Intel</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -24,9 +24,6 @@
 </head>
  
 <body>
-
-
-
 
 
 <div id="container">
@@ -50,16 +47,23 @@
 
 
 <h4>The Rest of the Market</h4>
-<br>
 
-<p>
+<div class="imagerightcaption" style="width:330px;">
 
-It cannot be understated the demand for products that these companies are faced with. Innovations in AI, big data, 5G, and the proliferation of devices across the developing world are driving a high demand for more and more faster devices. It was these extreme pressures that caused them to expand to take over the whole market, but not without game-changing technological progress. Hundreds of billions, if not trillions of R&D was invested in advancing the cutting edge, creating new feats in 3D architecture, EUV lithography, and energy-efficient architecture. All of this resulted in 4 companies worth a combined 1.3 trillion dollars of wealth directly hiring hundreds of thousands of employees. 
+<a id="Figure7">
 
-The semiconductor industry is strange in the way that there are many firms that are not leading the way in newer technology, but are still catering to large needs in the market. The previous companies are fighting for who makes the heart of your smartphones, PC, or who gets to contract with Amazon to make a data center, but computing only takes up 34% of the market. The other side of the industry is vulnerable to supply chain disruptions, which can cause a lot of negative economic effects, but it is based on simpler technology which is easier to fabricate. When the technology is older and less complicated it is possible to have a wider distribution of companies split up in a more balanced and competitive landscape. 
+<img src="SemiconductorDemand.png" width="330px" height="200px"  alt="Semiconductor demand by retail price of components"/>
 
+</a>
 
+</a>Figure 7: The demand of semiconductors, by retail price of components.<br>
+Source: Adapted from <a href="workscited.html#source8">[8]</a><br><br>
 
+</div>
+
+<p>It cannot be understated the demand for products that these companies are faced with. Innovations in AI, big data, 5G, and the proliferation of devices across the developing world are driving a high demand for more and more faster devices. It was these extreme pressures that caused them to expand to take over the whole market, but not without game-changing technological progress. Hundreds of billions, if not trillions of R&D was invested in advancing the cutting edge, creating new feats in 3D architecture, EUV lithography, and energy-efficient architecture. All of this resulted in 4 companies worth a combined 1.3 trillion dollars of wealth directly hiring hundreds of thousands of employees.</p>
+
+<p>The semiconductor industry is strange in the way that there are many firms that are not leading the way in newer technology, but are still catering to large needs in the market. The previous companies are fighting for who makes the heart of your smartphones, PC, or who gets to contract with Amazon to make a data center, but computing only takes up 34% of the market. The other side of the industry is vulnerable to supply chain disruptions, which can cause a lot of negative economic effects, but it is based on simpler technology which is easier to fabricate. When the technology is older and less complicated it is possible to have a wider distribution of companies split up in a more balanced and competitive landscape.</p>
 
 
 </div>
