--- a/restofmarket.html
+++ b/restofmarket.html
@@ -42,6 +42,14 @@
 </div>
 
 
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="tsmc.html">TSMC</a>&rarr; 
+	<a href="samsung.html">Samsung</a>&rarr; 
+	<a href="intel.html">Intel</a>&rarr;
+	<a href="asml.html">ASML</a>&rarr;
+	<a href="restofmarket.html"><b>The Rest of the Market</b></a>
+</div>
 
 <div id="main-content">
 
